css/sparkles.css
/* ... */
footer a {
  color: rgb(255,255,255);
}

footer p a.email:hover, footer p a.policy:hover  {
  text-decoration: underline;
}

footer ul li {
  display: inline-block;
}

footer .fab {
  font-size: 22px;
}

footer .fab.fa-twitter:hover{
  color: rgb(56,161,243);
}

footer .fab.fa-instagram:hover{
  color: rgb(188, 42, 141);
}

footer .fab.fa-youtube:hover{
  color: rgb(196, 48, 43);
}

footer .fab.fa-facebook-f:hover{
  color: rgb(66,103,178);
}

footer .fab.fa-pinterest:hover{
  color: rgb(189,8,28);
}

.verticalLine {
  border-left: 1px solid rgb(102, 99, 99);
}


/* **********************************************************************
                                TEAM PAGE  
  ********************************************************************** */


#team-header-wrapper {
  background: url('https://i.imgur.com/kNKrfad.jpg') 50% 0;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-color: rgba(0,0,0,0.3);
  background-blend-mode: multiply;
}

.team-pic {
  background: url('https://i.imgur.com/OSCAKJb.jpg') 50% 0;
  height: 600px;
}

#team-members-container {
  background-color: rgb(245, 245, 220); /*beige */
}

.team-member {
  padding-top: 200px;
  height: 450px;
}

.team-member-detail {
  font-weight: 100;
  font-size: 0.7rem;
}

.member-1 {
  background: url('https://i.imgur.com/7sCHqVV.jpg') 50% 0;
  /* background-attachment: fixed; */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-color: rgba(0,0,0,0.3);
  background-blend-mode: multiply;
}

.member-2 {
  background: url('https://i.imgur.com/kwbGaRP.jpg') 50% 0;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-color: rgba(0,0,0,0.3);
  background-blend-mode: multiply;
}

.member-3 {
  background: url('https://i.imgur.com/KeaEsH4.jpg') 50% 0;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-color: rgba(0,0,0,0.3);
  background-blend-mode: multiply;
}

.member-4 {
  background: url('https://i.imgur.com/Z4fq4e9.jpg') 50% 0;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-color: rgba(0,0,0,0.3);
  background-blend-mode: multiply;
}


/* **********************************************************************
                                SERVICES PAGE  
  ********************************************************************** */


#services-header-wrapper {
    background: url('https://i.imgur.com/Xe1bbX6.jpg') 50% 0;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-color: rgba(0,0,0,0.3);
    background-blend-mode: multiply;
  }
  
  .banner {
    background-color: rgb(85, 78, 78);
  }

  .banner a {
    font-family: 'Josefin Sans', sans-serif;
    font-size: 1.6rem;
  }

  .small-image {
    background: url('https://i.imgur.com/aHe1gn7.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 300px;
    padding-top: 155px;
  }

  .small-image p{
    background-color: rgba(189,8,28, 0.4);
  }

  .border-color {
    border: solid 3px rgba(189,8,28, 0.4);
  }

  #services-selection {
    background-color: rgba(206, 198, 198, 0.1);
  }

  #services-selection p {
    font-size: 1rem;
  }
  
  #services-selection ul li{
    font-size: 0.85rem;
    font-weight: 100;
  }


  /* **********************************************************************
                                PORTFOLIO PAGE  
  ********************************************************************** */


  #porfolio-header-wrapper {
    background: url('https://i.imgur.com/vqeeYCK.jpg') 50% 0;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-color: rgba(0,0,0,0.3);
    background-blend-mode: multiply;
  }

  h2.portfolio-headings {
    border-bottom: 1px solid rgb(241, 241, 241); 
    padding-bottom: 20px; 
    width: 30%;
    margin-left: 35%;
    /* text-align: center; */
  }

.gallery-bg {
  border-radius: 50%;
  background-color: bisque;
  width: 100%;
  height: 400px;
}

.gallery-bg-wedding {
  background: url('https://i.imgur.com/twq2tkJ.jpg') 50% 0;
  /* background-attachment: fixed; */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-color: rgba(0,0,0,0.3);
  background-blend-mode: multiply;
}

.gallery-bg-social {
  background: url('https://i.imgur.com/CiXd4f6.jpg') 50% 0;
  /* background-attachment: fixed; */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-color: rgba(0,0,0,0.3);
  background-blend-mode: multiply;
}

.gallery-bg-corporate{
  background: url('https://i.imgur.com/zerRdJv.jpg') 50% 0;
  /* background-attachment: fixed; */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-color: rgba(0,0,0,0.3);
  background-blend-mode: multiply;
}
.gallery-bg a.gallery-title{
  /* margin: auto; */
  /* color: rgb(255, 255, 255); */
}

  #weddings p {
    padding-top: 20px; 
    font-size: 1rem;
    letter-spacing: 0.3rem;
  }

 .portfolio-img {
    height: 280px;
    width: 100%;
    overflow: hidden;
  }

.icon-content {
    position: relative;
    z-index: 2;
    margin-top: -45%;
    margin-bottom: 40%;
    text-align: center;
  }

 .fa-plus {
    color: red;
    font-size: 2.5rem;
  }

  /* *********************  WEDDINGS  ********************* */

  .portfolio button {
    font-size: 0.8rem;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
  }
/* ... */

